--- a/NPK/templates/base.html
+++ b/NPK/templates/base.html
@@ -65,7 +65,7 @@
                         </div>
 
                         <ul class="ml-auto nav navbar-nav mr-2 d-none d-lg-flex">
-                            <li class="nav-item"><a href="#" class="nav-link">Get Help</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Contact Us</a></li>
                         </ul>
 
                         <form class="search-form search-form--light d-none d-sm-flex flex ml-3" action="fixed-index.html">
@@ -75,6 +75,15 @@
                         <ul class="nav navbar-nav d-none d-md-flex">
                             <li class="nav-item dropdown">
                             </li>
+                        </ul>
+
+                        <ul class="ml-2 nav navbar-nav mr-2 d-none d-lg-flex">
+                            <button type="button" class="btn btn-info btn-rounded">
+                                <i class="fas fa-cart-plus"></i>
+                            </button>
+                        </ul>
+                        <ul class="ml-2 nav navbar-nav mr-2 d-none d-lg-flex">
+                            <button type="button" class="btn btn-success">Login</button>
                         </ul>
 
                         <div class="dropdown">
@@ -126,8 +135,8 @@
                             <li class="nav-item dropdown active">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Categories</a>
                                 <div class="dropdown-menu">
-                                    <a href="" class="dropdown-item active">Test 1</a>
-                                    <a href="" class="dropdown-item">Test 2</a>
+                                    <a href="#" class="dropdown-item active">Deck Courses</a>
+                                    <a href="#" class="dropdown-item">Engine Courses</a>
                                 </div>
                             </li>
                         </ul>
@@ -139,7 +148,7 @@
             <div class="home-banner text-white mb-4">
                 <div class="container page__container">
                     <h1 class="display-4 bold" data-aos="fade-up" data-aos-duration="800">Everything you need to LEARN</h1>
-                    <p class="lead mb-5" data-aos="fade-up" data-aos-duration="1000">Get your first Job as a UI/UX Designer</p>
+                    <p class="lead mb-5" data-aos="fade-up" data-aos-duration="1000">Get your first Maritime Course</p>
                     <div data-aos="fade-down" data-aos-duration="400" data-aos-delay="400" data-offset="-100">
                         <form class="search-form search-form--light p-2" action="">
                             <input type="text" class="form-control" placeholder="Search">
@@ -160,7 +169,7 @@
                     <div class="col-md-6 offset-md-3">
                         <div class="mb-4">
 
-                            <h4 class="text-center text-primary bold mb-1">Sign up and get new UI releases</h4>
+                            <h4 class="text-center text-primary bold mb-1">Sign up and get new Course Update</h4>
                             <p class="text-center text-muted">No spam. Only releases, updates and discounts</p>
                         </div>
                         <div class="d-flex">
@@ -188,38 +197,8 @@
                         <div class="col-md-9">
                             <div class="row">
                                 <div class="col-sm-6 col-md-3">
-                                    <h5>Student</h5>
-                                    <ul class="list-group list-group-flush mb-3">
-                                        <li class="">
-                                            <a href="#">Courses</a>
-                                        </li>
-                                        <li class="">
-                                            <a href="#">Take Course</a>
-                                        </li>
-                                        <li class="">
-                                            <a href="#">Profile</a>
-                                        </li>
-                                        <li class="">
-                                            <a href="#">Edit Account</a>
-                                        </li>
-                                    </ul>
                                 </div>
                                 <div class="col-sm-6 col-md-3">
-                                    <h5>Instructor</h5>
-                                    <ul class="list-group list-group-flush mb-3">
-                                        <li class="">
-                                            <a href="#">Dashboard</a>
-                                        </li>
-                                        <li class="">
-                                            <a href="#">Edit Course</a>
-                                        </li>
-                                        <li class="">
-                                            <a href="#">Instructor Profile</a>
-                                        </li>
-                                        <li class="">
-                                            <a href="#">Quizzes</a>
-                                        </li>
-                                    </ul>
                                 </div>
                                 <div class="col-sm-6 col-md-3">
                                     <h5>Account</h5>
@@ -231,10 +210,10 @@
                                             <a href="#">Sign up</a>
                                         </li>
                                         <li class="">
-                                            <a href="#">Edit Account</a>
+                                            <a href="#">Courses</a>
                                         </li>
                                         <li class="">
-                                            <a href="#">Payout</a>
+                                            <a href="#">About Us</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -246,7 +225,7 @@
 
                                         <a href="" class="btn btn-facebook btn-rounded-social d-flex align-items-center justify-content-center mr-2"><i class="fab fa-facebook"></i></a>
                                         <a href="" class="btn btn-twitter btn-rounded-social d-flex align-items-center justify-content-center mr-2"><i class="fab fa-twitter"></i></a>
-                                        <a href="" class="btn btn-secondary btn-rounded-social d-flex align-items-center justify-content-center mr-2"><i class="fab fa-github"></i></a>
+                                        <a href="" class="btn btn-secondary btn-rounded-social d-flex align-items-center justify-content-center mr-2"><i class="fab fa-instagram"></i></a>
 
                                     </div>
                                 </div>
