--- a/NPK/templates/index.html
+++ b/NPK/templates/index.html
@@ -9,14 +9,14 @@
 
                 <h2 class="bold m-4 text-center p-4">Recent Courses</h2>
                 <div class="row">
-
+                    {% for course in portfolio %}
                     <div class="col-md-3">
                         <div class="card card__course" data-aos="fade-up" data-offset="-100">
                             <div class="card-header card-header-large card-header-dark bg-dark d-flex justify-content-center">
                                 <a class="card-header__title  justify-content-center align-self-center d-flex flex-column" href="#">
-                                    <span><img src="assets/images/logos/react.svg" class="mb-1" style="width:34px;" alt="logo"></span>
-                                    <span class="course__title">React</span>
-                                    <span class="course__subtitle">Learn the Basics</span>
+                                    <span><img src="{{ course.image.url }}" class="mb-1" style="width:34px;" alt="logo"></span>
+                                    <span class="course__title">{{course.title}}</span>
+                                    <span class="course__subtitle">{{course.subtitle | truncatechars:15}}</span>
                                 </a>
                             </div>
                             <div class="p-3">
@@ -32,102 +32,19 @@
                                     <small class="text-muted">(391 ratings)</small>
                                 </div>
                                 <div class="d-flex align-items-center">
-                                    <strong class="h4 m-0">$49</strong>
+                                    <strong class="h4 m-0">{{course.price}} Rs.</strong>
                                     <a href="#" class="btn btn-primary ml-auto"><i class="material-icons">add_shopping_cart</i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
-
-                    <div class="col-md-3">
-                        <div class="card card__course" data-aos="fade-up" data-offset="-100">
-                            <div class="card-header card-header-large card-header-dark bg-dark d-flex justify-content-center">
-                                <a class="card-header__title  justify-content-center align-self-center d-flex flex-column" href="#">
-                                    <span><img src="assets/images/logos/vuejs.svg" class="mb-1" style="width:34px;" alt="logo"></span>
-                                    <span class="course__title">Vue.js</span>
-                                    <span class="course__subtitle">Quick Tips</span>
-                                </a>
-                            </div>
-                            <div class="p-3">
-                                <div class="mb-2">
-                                    <span class="mr-2">
-                                        <a href="#" class="rating-link active"><i class="material-icons icon-16pt">star</i></a>
-                                        <a href="#" class="rating-link active"><i class="material-icons icon-16pt">star</i></a>
-                                        <a href="#" class="rating-link active"><i class="material-icons icon-16pt">star</i></a>
-                                        <a href="#" class="rating-link active"><i class="material-icons icon-16pt">star</i></a>
-                                        <a href="#" class="rating-link active"><i class="material-icons icon-16pt">star_half</i></a>
-                                    </span>
-                                    <strong>4.7</strong><br />
-                                    <small class="text-muted">(391 ratings)</small>
-                                </div>
-                                <div class="d-flex align-items-center">
-                                    <strong class="h4 m-0">$49</strong>
-                                    <a href="#" class="btn btn-primary ml-auto"><i class="material-icons">add_shopping_cart</i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-3">
-                        <div class="card card__course" data-aos="fade-up" data-offset="-100">
-                            <div class="card-header card-header-large card-header-dark bg-dark d-flex justify-content-center">
-                                <a class="card-header__title  justify-content-center align-self-center d-flex flex-column" href="#">
-                                    <span><img src="assets/images/logos/angular.svg" class="mb-1" style="width:34px;" alt="logo"></span>
-                                    <span class="course__title">Angular</span>
-                                    <span class="course__subtitle">Back to Basics</span>
-                                </a>
-                            </div>
-                            <div class="p-3">
-                                <div class="mb-2">
-                                    <span class="mr-2">
-                                        <a href="#" class="rating-link active"><i class="material-icons icon-16pt">star</i></a>
-                                        <a href="#" class="rating-link active"><i class="material-icons icon-16pt">star</i></a>
-                                        <a href="#" class="rating-link active"><i class="material-icons icon-16pt">star</i></a>
-                                        <a href="#" class="rating-link active"><i class="material-icons icon-16pt">star</i></a>
-                                        <a href="#" class="rating-link active"><i class="material-icons icon-16pt">star_half</i></a>
-                                    </span>
-                                    <strong>4.7</strong><br />
-                                    <small class="text-muted">(391 ratings)</small>
-                                </div>
-                                <div class="d-flex align-items-center">
-                                    <strong class="h4 m-0">$49</strong>
-                                    <a href="#" class="btn btn-primary ml-auto"><i class="material-icons">add_shopping_cart</i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-3">
-                        <div class="card card__course" data-aos="fade-up" data-offset="-100">
-                            <div class="card-header card-header-large card-header-dark bg-dark d-flex justify-content-center">
-                                <a class="card-header__title  justify-content-center align-self-center d-flex flex-column" href="#">
-                                    <span><img src="assets/images/logos/javascript.svg" class="mb-1" style="width:34px;" alt="logo"></span>
-                                    <span class="course__title">Javascript</span>
-                                    <span class="course__subtitle">ES6 and Beyond</span>
-                                </a>
-                            </div>
-                            <div class="p-3">
-                                <div class="mb-2">
-                                    <span class="mr-2">
-                                        <a href="#" class="rating-link active"><i class="material-icons icon-16pt">star</i></a>
-                                        <a href="#" class="rating-link active"><i class="material-icons icon-16pt">star</i></a>
-                                        <a href="#" class="rating-link active"><i class="material-icons icon-16pt">star</i></a>
-                                        <a href="#" class="rating-link active"><i class="material-icons icon-16pt">star</i></a>
-                                        <a href="#" class="rating-link active"><i class="material-icons icon-16pt">star_half</i></a>
-                                    </span>
-                                    <strong>4.7</strong><br />
-                                    <small class="text-muted">(391 ratings)</small>
-                                </div>
-                                <div class="d-flex align-items-center">
-                                    <strong class="h4 m-0">$49</strong>
-                                    <a href="#" class="btn btn-primary ml-auto"><i class="material-icons">add_shopping_cart</i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
+                    {% empty %}
+                        <h3  class="bold p4" >No Courses available!</h3>
+                    {% endfor %}
                 </div>
-
+                <div class="text-center m-4 pb-4" data-aos-duration="1000" data-aos="fade-up">
+                    <a href="#" class="btn btn-light btn-lg">View All</a>
+                </div>
                 <div class="m-4 p-4">
                     <h2 class="bold mb-1 text-center">Features &amp; Highlights</h2>
                     <p class="lead text-muted text-center">What makes LEMA an awesome template</p>
@@ -253,10 +170,6 @@
                             <p class="m-0">Learn from top-class instructors</p>
                         </div>
                     </div>
-                </div>
-
-                <div class="text-center m-4 pb-4" data-aos-duration="1000" data-aos="fade-up">
-                    <a href="#" class="btn btn-light btn-lg">View All</a>
                 </div>
 
 
