--- a/NPK/templates/auth/login.html
+++ b/NPK/templates/auth/login.html
@@ -25,11 +25,12 @@
                 <div class="page-separator__text">or</div>
             </div>
 
-            <form action="index.html" novalidate>
+            <form method="POST">
+                {% csrf_token %}
                 <div class="form-group">
                     <label class="text-label" for="email_2">Username:</label>
                     <div class="input-group input-group-merge">
-                        <input id="email_2" type="email" required="" class="form-control form-control-prepended" placeholder="Enter your Username">
+                        <input id="email_2" type="text" name="username" required class="form-control form-control-prepended" placeholder="Enter your Username">
                         <div class="input-group-prepend">
                             <div class="input-group-text">
                                 <span class="far fa-user"></span>
@@ -40,7 +41,7 @@
                 <div class="form-group">
                     <label class="text-label" for="password_2">Password:</label>
                     <div class="input-group input-group-merge">
-                        <input id="password_2" type="password" required="" class="form-control form-control-prepended" placeholder="Enter your password">
+                        <input id="password_2" type="password" name="password" required class="form-control form-control-prepended" placeholder="Enter your password">
                         <div class="input-group-prepend">
                             <div class="input-group-text">
                                 <span class="fa fa-key"></span>
