--- a/NPK/templates/auth/sign-up.html
+++ b/NPK/templates/auth/sign-up.html
@@ -24,11 +24,12 @@
                 <div class="page-separator__text">or</div>
             </div>
 
-            <form action="index.html" novalidate>
+            <form method="POST">
+                {% csrf_token %}
                 <div class="form-group">
                     <label class="text-label" for="name_2">Name:</label>
                     <div class="input-group input-group-merge">
-                        <input id="name_2" type="text" required="" class="form-control form-control-prepended" placeholder="John Doe">
+                        <input id="name_2" type="text" name="username" required class="form-control form-control-prepended" placeholder="John Doe">
                         <div class="input-group-prepend">
                             <div class="input-group-text">
                                 <span class="far fa-user"></span>
@@ -39,7 +40,7 @@
                 <div class="form-group">
                     <label class="text-label" for="email_2">Email Address:</label>
                     <div class="input-group input-group-merge">
-                        <input id="email_2" type="email" required="" class="form-control form-control-prepended" placeholder="john@doe.com">
+                        <input id="email_2" type="email" name="email" required class="form-control form-control-prepended" placeholder="john@doe.com">
                         <div class="input-group-prepend">
                             <div class="input-group-text">
                                 <span class="far fa-envelope"></span>
@@ -50,7 +51,7 @@
                 <div class="form-group">
                     <label class="text-label" for="password_2">Password:</label>
                     <div class="input-group input-group-merge">
-                        <input id="password_2" type="password" required="" class="form-control form-control-prepended" placeholder="Enter your password">
+                        <input id="password_2" type="password" name="password" required class="form-control form-control-prepended" placeholder="Enter your password">
                         <div class="input-group-prepend">
                             <div class="input-group-text">
                                 <span class="material-icons">lock</span>
