--- a/NPK/templates/dashboard/index.html
+++ b/NPK/templates/dashboard/index.html
@@ -8,6 +8,18 @@
     <!-- Page content Wrapper -->
     <div class="mdk-drawer-layout__content page">
     <div class="container-fluid page__heading-container">
+        {% if messages %}
+            <div class="mt-5 pt-4">
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags | default:'info' }} alert-dismissible fade show">
+                        {{ message }}
+                        <button class="close" type="button" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
         <div class="page__heading d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-lg-between text-center text-lg-left">
             <h1 class="m-lg-0">Admin Dashboard</h1>
             <div>
