--- a/NPK/templates/base.html
+++ b/NPK/templates/base.html
@@ -54,7 +54,7 @@
 
 
                         <div class="d-flex sidebar-account flex-shrink-0 mr-auto mr-lg-0">
-                            <a href="fixed-index.html" class="flex d-flex align-items-center text-underline-0">
+                            <a href="{% url 'index' %}" class="flex d-flex align-items-center text-underline-0">
                                 <span class="mr-1  text-white">
                                     <!-- LOGO -->
                                 </span>
@@ -65,23 +65,29 @@
                         </div>
 
                         <ul class="ml-auto nav navbar-nav mr-2 d-none d-lg-flex">
-                            <li class="nav-item"><a href="#" class="nav-link">Get Help</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Contact Us</a></li>
                         </ul>
 
-                        <form class="search-form search-form--light d-none d-sm-flex flex ml-3" action="fixed-index.html">
-                            <input type="text" class="form-control" placeholder="Search">
+                        <form class="search-form search-form--light d-none d-sm-flex flex ml-3" action="{% url 'search' %}" method="get">
+                            <input name="q" type="text" class="form-control" placeholder="Search">
                             <button class="btn" type="submit"><i class="material-icons">search</i></button>
                         </form>
                         <ul class="nav navbar-nav d-none d-md-flex">
                             <li class="nav-item dropdown">
                             </li>
                         </ul>
+
+                        <ul class="ml-2 nav navbar-nav mr-2 d-none d-lg-flex">
+                            <button type="button" class="btn btn-info btn-rounded">
+                                <i class="fas fa-cart-plus"></i>
+                            </button>
+                        </ul>
                         {% if request.user.is_authenticated %}
                         <div class="dropdown">
                             <a href="#account_menu" class="dropdown-toggle navbar-toggler navbar-toggler-dashboard border-left d-flex align-items-center ml-navbar" data-toggle="dropdown">
                                 <img src="{% static 'profile.png' %}" class="rounded-circle" width="32" alt="Frontted">
                                 <span class="ml-1 d-flex-inline">
-                                    <span class="text-light">Adrian D.</span>
+                                    <span class="text-light">{{request.user.username}}</span>
                                 </span>
                             </a>
                             <div id="company_menu" class="dropdown-menu dropdown-menu-right navbar-company-menu">
@@ -91,19 +97,19 @@
                                         <img src="{% static 'profile.png' %}" width="43" height="43" alt="avatar">
                                     </span>
                                     <span class="flex d-flex flex-column">
-                                        <strong class="h5 m-0">Adrian D.</strong>
+                                        <strong class="h5 m-0">{{request.user.username}}</strong>
                                         <small class="text-muted text-uppercase">STUDENT</small>
                                     </span>
 
                                 </div>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item d-flex align-items-center py-2" href="fixed-student-edit-account.html">
+                                <a class="dropdown-item d-flex align-items-center py-2" href="#">
                                     <span class="material-icons mr-2">account_circle</span> Edit Account
                                 </a>
                                 <a class="dropdown-item d-flex align-items-center py-2" href="#">
                                     <span class="material-icons mr-2">settings</span> Settings
                                 </a>
-                                <a class="dropdown-item d-flex align-items-center py-2" href="login.html">
+                                <a class="dropdown-item d-flex align-items-center py-2" href="{% url 'logout' %}">
                                     <span class="material-icons mr-2">exit_to_app</span> Logout
                                 </a>
                             </div>
@@ -116,18 +122,19 @@
                                     <span class="text-light">Sign in</span>
                                 </span>
                             </a>
-                            <div id="company_menu" class="dropdown-menu dropdown-menu-right navbar-company-menu">
+                            <div class="dropdown-menu dropdown-menu-right navbar-company-menu">
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item d-flex align-items-center py-2" href="fixed-student-edit-account.html">
+                                <a class="dropdown-item d-flex align-items-center py-2" href="{% url 'register' %}">
                                     <span class="material-icons mr-2">account_circle</span> Sign Up
                                 </a>
-                                <a class="dropdown-item d-flex align-items-center py-2" href="#">
-                                    <span class="material-icons-outlined">Sign in</span>
+                                <a class="dropdown-item d-flex align-items-center py-2" href="{% url 'login' %}">
+                                    <span class="mr-2"><i class="fas fa-sign-in-alt"></i></span> Sign in
                                 </a>
                             </div>
                         </div>
 
                         {% endif %}
+
                     </div>
                 </div>
 
@@ -145,8 +152,8 @@
                             <li class="nav-item dropdown active">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Categories</a>
                                 <div class="dropdown-menu">
-                                    <a href="" class="dropdown-item active">Test 1</a>
-                                    <a href="" class="dropdown-item">Test 2</a>
+                                    <a href="#" class="dropdown-item active">Deck Courses</a>
+                                    <a href="#" class="dropdown-item">Engine Courses</a>
                                 </div>
                             </li>
                         </ul>
@@ -157,11 +164,11 @@
 
             <div class="home-banner text-white mb-4">
                 <div class="container page__container">
-                    <h1 class="display-4 bold" data-aos="fade-up" data-aos-duration="800">Marine and Shipping Services</h1>
-                    <p class="lead mb-5" data-aos="fade-up" data-aos-duration="1000">Search Our Courses and Services</p>
+                    <h1 class="display-4 bold" data-aos="fade-up" data-aos-duration="800">Everything you need to LEARN</h1>
+                    <p class="lead mb-5" data-aos="fade-up" data-aos-duration="1000">Get your first Maritime Course</p>
                     <div data-aos="fade-down" data-aos-duration="400" data-aos-delay="400" data-offset="-100">
-                        <form class="search-form search-form--light p-2" action="">
-                            <input type="text" class="form-control" placeholder="Search">
+                        <form class="search-form search-form--light p-2" action="{% url 'search' %}" method="get">
+                            <input name="q" type="text" class="form-control" placeholder="Search">
                             <button class="btn" type="submit"><i class="material-icons">search</i></button>
                         </form>
                     </div>
@@ -179,7 +186,7 @@
                     <div class="col-md-6 offset-md-3">
                         <div class="mb-4">
 
-                            <h4 class="text-center text-primary bold mb-1">Sign up and get new UI releases</h4>
+                            <h4 class="text-center text-primary bold mb-1">Sign up and get new Course Update</h4>
                             <p class="text-center text-muted">No spam. Only releases, updates and discounts</p>
                         </div>
                         <div class="d-flex">
@@ -207,38 +214,8 @@
                         <div class="col-md-9">
                             <div class="row">
                                 <div class="col-sm-6 col-md-3">
-                                    <h5>Student</h5>
-                                    <ul class="list-group list-group-flush mb-3">
-                                        <li class="">
-                                            <a href="#">Courses</a>
-                                        </li>
-                                        <li class="">
-                                            <a href="#">Take Course</a>
-                                        </li>
-                                        <li class="">
-                                            <a href="#">Profile</a>
-                                        </li>
-                                        <li class="">
-                                            <a href="#">Edit Account</a>
-                                        </li>
-                                    </ul>
                                 </div>
                                 <div class="col-sm-6 col-md-3">
-                                    <h5>Instructor</h5>
-                                    <ul class="list-group list-group-flush mb-3">
-                                        <li class="">
-                                            <a href="#">Dashboard</a>
-                                        </li>
-                                        <li class="">
-                                            <a href="#">Edit Course</a>
-                                        </li>
-                                        <li class="">
-                                            <a href="#">Instructor Profile</a>
-                                        </li>
-                                        <li class="">
-                                            <a href="#">Quizzes</a>
-                                        </li>
-                                    </ul>
                                 </div>
                                 <div class="col-sm-6 col-md-3">
                                     <h5>Account</h5>
@@ -250,10 +227,10 @@
                                             <a href="#">Sign up</a>
                                         </li>
                                         <li class="">
-                                            <a href="#">Edit Account</a>
+                                            <a href="#">Courses</a>
                                         </li>
                                         <li class="">
-                                            <a href="#">Payout</a>
+                                            <a href="#">About Us</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -265,7 +242,7 @@
 
                                         <a href="" class="btn btn-facebook btn-rounded-social d-flex align-items-center justify-content-center mr-2"><i class="fab fa-facebook"></i></a>
                                         <a href="" class="btn btn-twitter btn-rounded-social d-flex align-items-center justify-content-center mr-2"><i class="fab fa-twitter"></i></a>
-                                        <a href="" class="btn btn-secondary btn-rounded-social d-flex align-items-center justify-content-center mr-2"><i class="fab fa-github"></i></a>
+                                        <a href="" class="btn btn-secondary btn-rounded-social d-flex align-items-center justify-content-center mr-2"><i class="fab fa-instagram"></i></a>
 
                                     </div>
                                 </div>
