--- a/NPK/templates/base.html
+++ b/NPK/templates/base.html
@@ -186,7 +186,7 @@
                     <div class="col-md-6 offset-md-3">
                         <div class="mb-4">
 
-                            <h4 class="text-center text-primary bold mb-1">Sign up and get new Course Update</h4>
+                            <h4 class="text-center text-primary bold mb-1">Sign up and get new Marine Services & Course Update</h4>
                             <p class="text-center text-muted">No spam. Only releases, updates and discounts</p>
                         </div>
                         <div class="d-flex">
@@ -236,7 +236,7 @@
                                 </div>
                                 <div class="col-sm-6 col-md-3">
                                     <h5>Contact us</h5>
-                                    <p class="text-light">Street Name, Suite 12<br /> Dublin, Ireland</p>
+                                    <p class="text-light">24th Street, Green Park<br /> Kolkata, India</p>
 
                                     <div class="d-flex ">
 
