--- a/NPK/templates/base.html
+++ b/NPK/templates/base.html
@@ -236,7 +236,7 @@
                                 </div>
                                 <div class="col-sm-6 col-md-3">
                                     <h5>Contact us</h5>
-                                    <p class="text-light">24th Street, Green Park<br /> Kolkata, India <br /> founder-ceo@npk-knots.com</p>
+                                    <p class="text-light">24th Street, Green Park<br /> Kolkata, India <br />info@npk-knots.com</p>
                                     
 
                                     <div class="d-flex ">
